force-app/main/default/objects/Trip_Request__c/Trip_Request__c.object-meta.xml
<CustomObject>
    <label>Trip Request</label>
    <nameField>
        <label>Trip Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trip Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>