force-app/main/default/objects/Trip_Request__c/fields/Airfare_Cost__c.field-meta.xml
<CustomField>
    <fullName>Airfare_Cost__c</fullName>
    <label>Airfare Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>