force-app/main/default/objects/Trip_Request__c/fields/Customer_Facing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facing__c</fullName>
    <label>Customer Facing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>