force-app/main/default/objects/Trip_Request__c/fields/Expected_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Cost__c</fullName>
    <label>Expected Total Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>