force-app/main/default/objects/Trip_Request__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <length>55</length>
    <type>Text</type>
</CustomField>