force-app/main/default/objects/Trip_Request__c/fields/Trip_Description__c.field-meta.xml
<CustomField>
    <fullName>Trip_Description__c</fullName>
    <label>Trip Description</label>
    <type>TextArea</type>
</CustomField>