force-app/main/default/objects/Trip_Request__c/fields/Trip_End__c.field-meta.xml
<CustomField>
    <fullName>Trip_End__c</fullName>
    <label>Trip End</label>
    <type>DateTime</type>
</CustomField>