force-app/main/default/objects/Trip_Request__c/fields/Trip_Start__c.field-meta.xml
<CustomField>
    <fullName>Trip_Start__c</fullName>
    <label>Trip Start</label>
    <type>DateTime</type>
</CustomField>